AoC19 Day18 draft #32